# rust_read_csv

./: Cargo.toml  npread.py  pandasread.py  pyread.py  uk_cities.csv  uspop.csv  uspop_test.csv
src/: main.rs
