[package]
name = "csvtutor"
version = "0.1.0"
authors = ["Peruz <lucaperuzzo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { git = "https://github.com/rust-ndarray/ndarray.git" }
plotters = { git = "https://github.com/38/plotters.git" }
csv = { git = "https://github.com/BurntSushi/rust-csv.git" }
clap = { git = "https://github.com/clap-rs/clap.git" }
# clap = "2.33.1"

cblas-sys = { version = "0.1.4", optional = true, default-features = false }
blas-src = { version = "0.2.0", optional = true, default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"]}
rayon = { version = "1.0.3", optional = true }
approx = { version = "0.3.2", optional = true }

[features]
default = ["cblas-sys", "blas-src", "serde", "rayon", "approx"]

# Old name for the serde feature
serde-1 = ["serde"]


