[package]
name = "csvtutor"
version = "0.1.0"
authors = ["Peruz <lucaperuzzo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { git = "https://github.com/BurntSushi/rust-csv.git" }
clap = { git = "https://github.com/clap-rs/clap.git" }
rayon = {git = "https://github.com/rayon-rs/rayon.git"}
serde = {version = "1.0.116", features = ["derive"]}
